--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>D3Times</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/d3Style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/d3Style.css">
 
 </head>
 
@@ -27,10 +27,8 @@
     <div class="row">
       <div class="col-lg-11">
         <div class="article">
-          <h2>Correlations of Health Risks: Poverty, Income, Obesity, and Healthcare</h2>
-          <p>This 4-dimensional graph relates different factors in health risks categorized by state. The Healthcare Index for the state is plotted on the X-axis,
-            the Poverty Index for the state is plotted on the Y-axis. Income is correlated to the circle area (size of the circle) and Obesity Index is plotted by color
-            (from Green at low obesity to Red at high obesity). For more detailed information on each state's Obesity and Smoking Indices, click on the state abbreviation on the chart.
+          <h2>Health Risks Correlation: Poverty, Income, Obesity, & Healthcare</h2>
+          <p>Analysis
           </p>
         </div>
         <div class="col-lg-1">
@@ -44,7 +42,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-  <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="js/app2.js"></script>
 
 </body>
 
